content/vault/v1.7.x/content/docs/commands/plugin/reload.mdx
---
layout: docs
page_title: plugin reload - Command
sidebar_title: <code>reload</code>
description: |-
  The "plugin reload" command reloads mounted plugins.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:54:12-05:00
last_modified: 2025-07-25T10:39:53-07:00
# END AUTO GENERATED METADATA
---

# plugin reload

The `plugin reload` command is used to reload mounted plugin backends. Either
the plugin name (`plugin`) or the desired plugin backend mounts (`mounts`)
must be provided, but not both.

## Examples

Reload a plugin:

```shell-session
$ vault plugin reload -plugin my-custom-plugin
Success! Reloaded plugin: my-custom-plugin
```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

### Command Options

- `-plugin` `(string: "")` - The name of the plugin to reload, as registered in
  the plugin catalog.

- `-mounts` `(array: [])` - Array or comma-separated string mount paths of the
  plugin backends to reload.

- `-scope` `(string: "")` - The scope of the reload. For local reloads, omit this flag.
  For reloads that span multiple Vault clusters, use `global`.
